# whitenoise

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  whitenoise.py
whitenoise/: __init__.py  whitenoise.py
