[metadata]
name = whitenoise
description = A Python-based therapeutic white noise generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitry Mikushin
author_email = dmitry@kernelgen.org
url = https://github.com/dmikushin/whitenoise

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.16.0
    sounddevice>=0.4.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    whitenoise = whitenoise:main
